--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vapi-ai/web": "^2.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "framer-motion": "^11.18.2",
